# modified-ttk

ParaView-v5.6.0/Applications/ParaView/: CMakeLists.txt
ttk-0.9.7/core/base/bettiNumbers/: BettiNumbers.cpp  BettiNumbers.h  CMakeLists.txt
ttk-0.9.7/core/base/bottleneckDistance/: CMakeLists.txt
ttk-0.9.7/core/base/ftmTree/: AtomicUF.h  FTMTree_MT.h  Structures.h
ttk-0.9.7/core/base/ftmTreePP/: CMakeLists.txt  FTMTreePP.h
ttk-0.9.7/core/base/persistenceCurve/: CMakeLists.txt  PersistenceCurve.h
ttk-0.9.7/core/base/persistenceDiagram/: CMakeLists.txt  PersistenceDiagram.h
ttk-0.9.7/core/base/topologicalCompression/: CMakeLists.txt
ttk-0.9.7/core/base/topologicalSimplification/: TopologicalSimplification.h
ttk-0.9.7/core/base/topologicalSimplificationHelper/: CMakeLists.txt  TopologicalSimplificationHelper.cpp  TopologicalSimplificationHelper.h
ttk-0.9.7/core/base/trackingFromFields/: CMakeLists.txt
ttk-0.9.7/core/base/trackingFromPersistenceDiagrams/: CMakeLists.txt
ttk-0.9.7/core/base/volumePersistenceDiagram/: CMakeLists.txt  VolumePersistenceDiagram.cpp  VolumePersistenceDiagram.h
ttk-0.9.7/core/vtk/ttkBettiNumbers/: CMakeLists.txt  ttkBettiNumbers.cpp  ttkBettiNumbers.h
ttk-0.9.7/core/vtk/ttkPersistenceCurve/: ttkPersistenceCurve.cpp
ttk-0.9.7/core/vtk/ttkPersistenceDiagram/: ttkPersistenceDiagram.cpp
ttk-0.9.7/core/vtk/ttkTopologicalSimplificationHelper/: CMakeLists.txt  ttkTopologicalSimplificationHelper.cpp  ttkTopologicalSimplificationHelper.h
ttk-0.9.7/core/vtk/ttkVolumePersistenceDiagram/: CMakeLists.txt  ttkVolumePersistenceDiagram.cpp  ttkVolumePersistenceDiagram.h
ttk-0.9.7/examples/c++/: main.cpp
ttk-0.9.7/examples/vtk-c++/: CMakeLists.txt  curve.vtk  main.cpp  separatrices.vtu
ttk-0.9.7/myVTKProgram/: CMakeLists.txt  main.cpp
ttk-0.9.7/paraview/BettiNumbers/: BettiNumbers.xml  CMakeLists.txt
ttk-0.9.7/paraview/TopologicalSimplificationHelper/: CMakeLists.txt  TopologicalSimplificationHelper.xml
ttk-0.9.7/paraview/VolumePersistenceDiagram/: CMakeLists.txt  VolumePersistenceDiagram.xml
ttk-0.9.7/standalone/BettiNumbers/cmd/: CMakeLists.txt  main.cpp
ttk-0.9.7/standalone/BettiNumbers/gui/: CMakeLists.txt  main.cpp
ttk-0.9.7/standalone/VolumePersistenceDiagram/cmd/: CMakeLists.txt  main.cpp
ttk-0.9.7/standalone/VolumePersistenceDiagram/gui/: CMakeLists.txt  main.cpp
ttk-data-0.9.3/: FirstPersistenceTry.pvd
ttk-data-0.9.3/FirstPersistenceTry/: FirstPersistenceTry_0.vtu
ttk-data-0.9.3/states/: LiverTissueCriticalPointsShown.pvsm  beva_166.pvsm  beva_166.py  beva_166_smooth.pvsm  beva_166_smooth.py  goodReferenceData.pvsm  morsePersistence.py  persistHomologyGood.pvsm  persistHomologyTry.pvsm  persistenceHomologyGood.py  peter.py  sampleForTesting.pvsm  testOfPersistenceDiagram.pvsm  testOfTopoSimplificationData.pvsm
vtkWork/: .gitignore  README.md
vtkWork/FillHoles/: CMakeLists.txt  FillHoles.cxx
vtkWork/ImageStencilToImageTest/: CMakeLists.txt  ImageStencilToImageTest.cxx
vtkWork/IterateImageData/: CMakeLists.txt  IterateImageData.cxx
vtkWork/MeshVoxelizationVolumeCalculator/: CMakeLists.txt  MeshVoxelizationVolumeCalculator.cxx
vtkWork/MetaImageWriter/: CMakeLists.txt  MetaImageWriter.cxx
vtkWork/PolyDataToImageData/: CMakeLists.txt  PolyDataToImageData.cxx
vtkWork/SmartVolumeMapper/: CMakeLists.txt  SmartVolumeMapper.cxx
vtkWork/TestObtainCriticalPoints/: CMakeLists.txt  main.cxx
vtkWork/TestObtainCriticalPoints/data/: multiGaussianFunctionTestData.vtu  multiGaussianFunctionTestDataOutput.vtu
vtkWork/TopologicalSimplificationFilter/: TopologicalSimplificationHelper.h  ttkTopologicalSimplificationHelper.cpp  ttkTopologicalSimplificationHelper.h
vtkWork/VisualizeImageData/: CMakeLists.txt  VisualizeImageData.cxx
